@@ -37,11 +37,14 @@ void getgroup (int& N, vector<word>& rel, vector<word>& gen_H);
 int
 main (void)
 {
-  cout << "\nThis program uses the HLT version of the Todd-Coxeter procedure\n"
-       << "to compute the index in a finitely presented group G of a subgroup H.\n"
-       << "You will be prompted to enter the number of generators of G, the\n"
-       << "defining relators of G, and the generators of H.  Use a,b,... for\n"
-       << "the generators of G and A,B,... for their inverses.\n\n";
+  cout << "\nThis program uses the HLT+lookahead version of the Todd-Coxeter\n"
+       << "procedure to compute the index in a finitely presented group G of\n"
+       << "a subgroup H.  You will be prompted to enter the number of\n"
+       << "generators of G, the defining relators of G, and the generators\n"
+       << "of H.  Use a,b,... for the generators of G and A,B,... for their\n"
+       << "inverses.  You will also be prompted to enter a threshold.  If an\n"
+       << "HLT step causes the size of the coset table to exceed the threshold,\n"
+       << "the program will use lookahead to try to shrink the table.\n\n";
   int NGENS;
   vector<word> rel;
   vector<word> gen_H;
