@@ -1,3 +1,11 @@
+2011-04-23  Ken Brown  <kbrown@cornell.edu>
+
+	* README: New file.
+	* INSTALL: Ditto.
+	* main.cc (main): Tweak output.
+	* main+.cc (main): Ditto.
+	* TODO: Update
+
 2011-04-22  Ken Brown  <kbrown@cornell.edu>
 
 	* TODO: Update.
